[gd_scene load_steps=3 format=3 uid="uid://c0tr1j2q7f2wl"]

[ext_resource type="Script" path="res://Game/waifa_choosing.gd" id="1_6aqtp"]
[ext_resource type="PackedScene" uid="uid://25v0wvta218p" path="res://Game/waifa/gallery_waifa.tscn" id="3_fomiv"]

[node name="WaifaChoosing" type="Node2D"]
script = ExtResource("1_6aqtp")

[node name="HideButton" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = -103.0
offset_top = -68.0
offset_right = 2008.0
offset_bottom = 1212.0

[node name="HideButton2" type="Button" parent="."]
offset_left = 831.0
offset_top = 470.0
offset_right = 1003.0
offset_bottom = 556.0
text = "Back"

[node name="Buttons" type="Node2D" parent="."]

[node name="Next" type="Button" parent="Buttons"]
offset_left = 1008.0
offset_top = 204.0
offset_right = 1063.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 20
text = "Next"

[node name="Previous" type="Button" parent="Buttons"]
offset_left = 968.0
offset_top = 139.0
offset_right = 1043.0
offset_bottom = 170.0
text = "Previous"

[node name="Unlock" type="Button" parent="Buttons"]
offset_left = 1008.0
offset_top = 263.0
offset_right = 1070.0
offset_bottom = 294.0
theme_override_font_sizes/font_size = 20
text = "Unlock"

[node name="SaveImg" type="Button" parent="Buttons"]
offset_left = 925.0
offset_top = 177.0
offset_right = 969.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 20
text = "Save"

[node name="GalleryWaifa" parent="." instance=ExtResource("3_fomiv")]
position = Vector2(321, 616)

[node name="PicNumber" type="Label" parent="."]
offset_left = 950.0
offset_top = 321.0
offset_right = 1069.0
offset_bottom = 349.0
theme_override_font_sizes/font_size = 20
text = "Current pic: "

[connection signal="pressed" from="HideButton" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="HideButton2" to="." method="_on_hide_button_pressed"]
[connection signal="pressed" from="Buttons/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Buttons/Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Buttons/Unlock" to="." method="_on_unlock_pressed"]
[connection signal="pressed" from="Buttons/SaveImg" to="." method="_on_save_img_pressed"]
